# -EDD-Proyecto_202100301

FASE 1/Manuales/: ManualTecnico.docx  ManualUsuario.docx
FASE 1/main/listaSolicitudesAmistad/: GestionarAdmin.cpp  GestionarAdmin.h  GestionarSoli.cpp  GestionarSoli.h  MimatrizAmistades.dot  PilaSoli_R.cpp  PilaSoli_R.h  listaAmistades.cpp  listaAmistades.h  listaCircular.h  listaEnlazada.cpp  listaEnlazada.h  listaSoli_E.cpp  listaSoli_E.h  main.cpp  nodoMatriz.cpp  nodoMatriz.h  nodoPublicacion.cpp  nodoPublicacion.h  nodoPublicacionCircular.cpp  nodoPublicacionCircular.h  pruebas.cpp  pruebasJson.cpp
FASE 2/Fase2/: CMakeLists.txt  GestionarSoli.cpp  GestionarSoli.h  Huffman.cpp  Huffman.h  PilaSoli_R.cpp  PilaSoli_R.h  SimplePublicacion.cpp  SimplePublicacion.h  admin.cpp  admin.h  admin.ui  arbolB.cpp  arbolB.h  buscar.cpp  buscar.h  buscar.ui  buscaradmin.cpp  buscaradmin.h  buscaradmin.ui  cargaradmin.cpp  cargaradmin.h  cargaradmin.ui  comentaru.cpp  comentaru.h  comentaru.ui  crearpublicacion.cpp  crearpublicacion.h  crearpublicacion.ui  crearuser.cpp  crearuser.h  crearuser.ui  globales.h  globalesV.h  listaAmistades.cpp  listaAmistades.h  listaEnlazadaArbol.cpp  listaEnlazadaArbol.h  listaPublicaciones.cpp  listaPublicaciones.h  (+65 more)
FASE 2/Manuales/: ManualTecnico.docx  ManualUsuario.docx
FASE 2/Manuales F2/: ManualTecnico.docx  ManualUsuario.docx  ~$nualTecnico.docx
